--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,6 +28,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run the main python file
         run: python main.py
+        
+      - name: Test secrets
+        run: echo ${{ secrets.SSH_HOST }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
