--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,10 @@ jobs:
         run: python main.py
         
       - name: Test secrets
-        run: echo ${{ secrets.SSH_HOST }}
+        run: echo ${{ secrets.SSH_HOST }} >> a
+        
+      - name: try to display secrets
+        run: cat a
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
